# better-cpp-playground

./: -.json  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cpp.code-workspace  package-lock.json  package.json  tmp.txt  wallaby.cjs
apps/: CMakeLists.txt
apps/main/: CMakeLists.txt
apps/main/src/: main.cpp
apps/winduh/: CMakeLists.txt
apps/winduh/src/: wmain.cpp
cmake/: variables.cmake
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile  Doxyfile.in
scripts/: bencher.js  clearTiming.js  collectTimings.js  combineTrace.js  container.js  pp.js  printTimingPerFile.js  projectInfo.js  protoGen.js  pruneLogs.js  tester.js  util.js
scripts/buildTiming/: traceDataFormat.js
scripts/logging/: formatter.js  levels.js  sinks.js
scripts/tests/: bencher.spec.js  container.spec.js  fakeBenches.js  util.spec.js
